--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://bootswatch.com/4/darkly/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css" />
   <title>React App</title>
 </head>
 <body>
